# cpp-application-project-template

./: CMakeLists.txt  README.md  configure_mingw64
app/: appinfo.h  main.cpp
src/: myint.cpp
src/metaballs/: metaballs.cpp
test/: gtest_myint.cpp  hello_test.cpp
tools/build_shell/: build_emsdk.bat  build_project.bat  build_project.sh  clean_all.bat  clean_project.bat  clean_project.sh  git_clone_thirdparty.sh  setup_build_env.bat  setup_build_env.sh  setup_build_env_by_emsdk.sh
tools/emsdk_patch/: emsdk.py.patch  emsdk.py.updated  generate_emsdk_patch.sh  patch_emsdk.sh
